--- a/css/sobremi.css
+++ b/css/sobremi.css
@@ -7,6 +7,25 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.content_whatsapp{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
+  }
+  
+  .whatsapp_static{
+    width: 60px;
+    position: fixed;
+    margin-top: 40vh;
+    transition: 0.5s;
+    z-index: 100;
+}
+  
+.whatsapp_static:hover{
+    width: 65px;
+    transition: 0.5s;
+}
+
 div{
     position: relative;
     overflow: hidden;
