--- a/css/subcss/conoceme.css
+++ b/css/subcss/conoceme.css
@@ -6,13 +6,31 @@
     font-family: 'Fira Sans', sans-serif;
 }
 
-
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   list-style: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.content_whatsapp{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
+  }
+  
+  .whatsapp_static{
+    width: 60px;
+    position: fixed;
+    margin-top: 40vh;
+    transition: 0.5s;
+    z-index: 100;
+}
+  
+.whatsapp_static:hover{
+    width: 65px;
+    transition: 0.5s;
 }
 
 .contentclientes{
@@ -60,6 +78,19 @@
     margin-top: 150px;
 }
 
+.instagram1{
+    display: flex;
+    width: 240px;
+    margin: auto;
+}
+
+.instagram2{
+    display: flex;
+    width: 240px;
+    margin: auto;
+}
+
+
 .grid{
     display: grid;
     grid-template-columns: min-content repeat();
@@ -84,6 +115,7 @@
     align-items: flex-end;
     margin-bottom: 50px;
     transition: 1s;
+    color: rgb(0, 0, 0);
 }
 
 .grid_title:hover{
@@ -99,12 +131,37 @@
     margin-right: 30px;
 }
 
+
+
+.grid2{
+    display: grid;
+    grid-template-columns: min-content repeat();
+    grid-template-rows: min-content min-content;
+    grid-template-areas: 
+    "title img"
+    "description img";
+    margin-top: 200px;
+}
+
+.grid_description2{
+    grid-area: description;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-left: 30px;
+}
+
 /*---------------phone-and-tablet-----------------*/
 @media (min-width: 431px) and (max-width: 670px) {
   
     /*------------------conoceme-------------*/
 
     .grid{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grid2{
         display: flex;
         flex-direction: column;
     }
@@ -120,6 +177,11 @@
     }
 
     .grid_description{
+        margin-right: 50px;
+        margin-left: 50px;
+    }
+
+    .grid_description2{
         margin-right: 50px;
         margin-left: 50px;
     }
@@ -147,6 +209,11 @@
         flex-direction: column;
     }
 
+    .grid2{
+        display: flex;
+        flex-direction: column;
+    }
+
     .grid_img{
         margin: auto;
         width: 320px;
@@ -158,6 +225,11 @@
     }
 
     .grid_description{
+        margin-right: 50px;
+        margin-left: 50px;
+    }
+
+    .grid_description2{
         margin-right: 50px;
         margin-left: 50px;
     }
